fixed button img alignment using flexbox

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ li {
 /* Main text styling */
 
 main {
-  margin-left: 100px;
+  margin-left: 2rem;
 }
 
 p {
@@ -88,17 +88,22 @@ p {
 /* button styling */
 
 button {
-  font-size: 32px;
-  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  height: 50px;
   padding: 1rem 4rem;
-  margin-top: 100px;
   background-color: var(--white);
   color: var(--orange);
   border: none;
 }
 
+.btn-img {
+  padding: 10px;
+}
+
 .contact-button {
-  margin-left: 20px;
   background-color: var(--orange);
   color: var(--white);
   border: 4px solid var(--white);
@@ -166,15 +171,9 @@ button {
     height: 100px;
     padding: 1rem 4rem;
     margin-top: 100px;
-    background-color: var(--white);
-    color: var(--orange);
-    border: none;
   }
 
   .contact-button {
     margin-left: 20px;
-    background-color: var(--orange);
-    color: var(--white);
-    border: 4px solid var(--white);
   }
 }
